ui-tests/tests/ui/no_equals.stderr
error: expected `=`, but found `there`
 --> $DIR/no_equals.rs:6:8
  |
6 |     hi there
  |        ^^^^^
