ui-tests/tests/ui/no_equals.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    hi there
}]
fn test() {}

fn main() {}
